--- a/index.html
+++ b/index.html
@@ -1,551 +1,26 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nghe-Viết-TạoDS</title>
+    <title>My PWA</title>
+    <link rel="manifest" href="manifest.json">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #282c34;
-            color: #61dafb;
-            padding: 20px;
-        }
-        h1 {
-            color: #61dafb;
-            text-align: center;
-        }
-        #vocabLabel {
-            font-size: 34px;
-            margin: 20px 0;
-            border: 2px solid #61dafb;
-            padding: 10px;
-            text-align: center;
-        }
-        .card {
-            background-color: #1c2025;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        .term {
-            color: lightgreen;
-            font-weight: bold;
-        }
-        .ipa {
-            color: yellow;
-        }
-        .vietnamese {
-            color: lightblue;
-        }
-        .pos {
-            color: lightgrey;
-        }
-        .example {
-            color: lightgreen;
-        }
-        .example_ipa {
-            color: yellow;
-        }
-        .example_vi {
-            color: lightblue;
-        }
-        input, button {
-            margin: 5px;
-            padding: 10px;
-            font-size: 16px;
-            border: none;
-            border-radius: 4px;
-        }
-        button {
-            background-color: #61dafb;
-            color: #282c34;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #21a1f1;
-        }
-        #questionCounter {
-            font-size: 20px;
-            color: white;
-            text-align: center;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-        #answerInput {
-            width: 80%;
-            max-width: 600px;
-            margin: 20px auto;
-            display: block;
-        }
-	#answerInput, #writingCheckBack {
-    	   width: 80%;
-    	   max-width: 600px;
-    	   margin: 20px auto;
-    	   display: block;
-   	   padding: 10px;
-    	   font-size: 26px;
-    	   border: none;
-    	   border-radius: 4px;
-    	   background-color: #1c2025;
-    	   color: #61dafb;
-}
-
-#checkAnswerButton, #checkAnswerBackButton {
-    display: block;
-    margin: 10px auto;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #61dafb;
-    color: #282c34;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-#checkAnswerButton:hover, #checkAnswerBackButton:hover {
-    background-color: #21a1f1;
-}
-        
-        #notification {
-            display: none;
-            padding: 10px;
-            margin: 10px auto;
-            text-align: center;
-            border-radius: 4px;
-            font-size: 18px;
-        }
-
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
     </style>
 </head>
 <body>
-
-<h4>Luyện Nghe - Viết - Tạo Danh Sách Từ Khó</h4>
-<input type="file" id="fileInput" accept=".xlsx" />
-<button id="importButton" onclick="importFile()">Nhập Từ Vựng</button>
-<button id="clearStorageButton" onclick="clearStorage()">Xóa Dữ Liệu Đã Lưu</button>
-
-<div style="text-align: center;">
-    <div id="questionCounter">Câu hỏi: 0/0</div>
-</div>
-<div id="vocabLabel">Không có từ vựng nào được thêm.</div>
-<input type="text" id="answerInput" placeholder="Nhập câu trả lời của bạn..." onkeydown="handleKeyDown(event)" />
-<button id="checkAnswerButton" onclick="checkAnswer()">Kiểm Tra</button>
-<input type="text" id="writingCheckBack" placeholder="Nhập câu trả lời mặt sau..." onkeydown="handleKeyDownBack(event)" />
-<button id="checkAnswerBackButton" onclick="checkAnswerBack()">Kiểm Tra Mặt Sau</button>
-<div id="notification"></div>
-
-<button onclick="prevWord()">Trước</button>
-<button onclick="flipCard()">Lật Thẻ</button>
-<button onclick="nextWord()">Tiếp Theo</button>
-<button id="autoFlipButton" onclick="toggleAutoFlip()">Tự Động</button>
-<button id="repeatButton" onclick="repeatPronunciation()">Lặp Lại</button>
-<button id="toggleModeButton" onclick="toggleMode()">Chế độ: Theo Thứ Tự</button>
-<button id="studyDifficultButton" onclick="studyDifficultWords()">Học câu khó</button>
-<button id="exportDifficultButton" onclick="exportDifficultWords()">Xuất câu khó</button>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
-
-<script>
-    let vocabList = []; // Danh sách từ vựng
-    let currentIndex = 0; // Vị trí từ hiện tại
-    let difficultWords = []; // Danh sách từ khó
-    let mistakeCount = {}; // Số lần sai của mỗi từ
-    let autoFlip = false;
-    let audio;
-    let autoFlipTimeout;
-    let isFront = true;
-    let currentPronunciationText = '';
-    let isRandomMode = false; // Mặc định là chế độ theo thứ tự
-    let audioMapping = []; // Lưu trữ thông tin âm thanh từ file JSON
-
-// Đọc file audio_mapping.json khi trang được tải
-fetch('audio_mapping.json')
-    .then(response => response.json())
-    .then(data => {
-        audioMapping = data;
-    })
-    .catch(error => console.error('Lỗi khi đọc file JSON:', error));
-
-    function toggleMode() {
-        isRandomMode = !isRandomMode;
-        document.getElementById("toggleModeButton").innerText = isRandomMode ? "Chế độ: Ngẫu Nhiên" : "Chế độ: Theo Thứ Tự";
-    }
-
-    document.getElementById('importButton').addEventListener('click', importFile);
-
-    document.addEventListener('keydown', function(event) {
-        switch(event.key) {
-            case 'ArrowLeft': // Mũi tên lui
-                prevWord();
-                break;
-            case 'ArrowRight': // Mũi tên tới
-                nextWord();
-                break;
-            case 'ArrowDown': // Mũi tên xuống
-                flipCard();
-                break;
-            case 'ArrowUp': // Space
-                repeatPronunciation();
-                break;
-            default:
-                break;
+    <h1>Welcome to My PWA</h1>
+    <p>This is a simple Progressive Web App.</p>
+    <a href="audio_test_offline.html">Go to Audio Test Page</a>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js').then(function(registration) {
+                console.log('Service Worker registered with scope:', registration.scope);
+            }).catch(function(error) {
+                console.log('Service Worker registration failed:', error);
+            });
         }
-    });
-
-    function handleKeyDown(event) {
-        if (event.key === 'Enter') { // Nếu nhấn phím Enter
-            checkAnswer(); // Gọi hàm kiểm tra
-        }
-    }
-
-    function handleKeyDownBack(event) {
-        if (event.key === 'Enter') { // Nếu nhấn phím Enter
-            checkAnswerBack(); // Gọi hàm kiểm tra mặt sau
-        }
-    }
-
-    function showNotification(message, isCorrect) {
-        const notification = document.getElementById('notification');
-        notification.innerText = message;
-        notification.style.display = 'inline-block';
-        notification.style.color = '#ffffff';
-        if (isCorrect) {
-            notification.classList.remove('wrong');
-            notification.style.backgroundColor = '#4caf50';
-        } else {
-            notification.classList.add('wrong');
-            notification.style.backgroundColor = '#f44336';
-        }
-        setTimeout(() => {
-            notification.style.display = 'none';
-        }, 2000); // Hiển thị thông báo trong 2 giây
-    }
-
-    function updateQuestionCounter() {
-        const questionCounter = document.getElementById('questionCounter');
-        questionCounter.innerText = `Câu hỏi: ${currentIndex + 1}/${vocabList.length}`;
-    }
-
-    function importFile() {
-        const fileInput = document.getElementById('fileInput');
-        const file = fileInput.files[0];
-
-        if (!file) {
-            alert("Vui lòng chọn một file .xlsx!");
-            return;
-        }
-
-        const reader = new FileReader();
-        reader.onload = function (event) {
-            const data = new Uint8Array(event.target.result);
-            const workbook = XLSX.read(data, { type: 'array' });
-
-            const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-            vocabList = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
-
-            if (vocabList.length > 0) {
-                vocabList.shift(); // Bỏ qua dòng tiêu đề
-                currentIndex = 0; // Khởi động lại chỉ số
-                saveProgress(); // Lưu tiến trình
-                displayWord();
-            } else {
-                document.getElementById('vocabLabel').innerText = "Không tìm thấy từ vựng nào.";
-            }
-        };
-
-        reader.readAsArrayBuffer(file);
-    }
-
-    function displayWord() {
-    if (vocabList.length > 0 && currentIndex < vocabList.length) {
-        const word = vocabList[currentIndex];
-        const frontCard = `
-            <div class="card">
-                <span class="term">${word[0]}</span><br>
-                <span class="ipa">${word[1]}</span><br>
-                <span class="vietnamese">${word[2]}</span><br>
-                <span class="pos">${word[6]}</span>
-            </div>
-        `;
-        const backCard = `
-            <div class="card">
-                <span class="example">${word[3]}</span><br>
-                <span class="example_ipa">${word[4]}</span><br>
-                <span class="example_vi">${word[5]}</span>
-            </div>
-        `;
-        document.getElementById('vocabLabel').innerHTML = isFront ? frontCard : backCard;
-
-        // Phát âm thanh tương ứng với mặt thẻ
-        const pronunciationText = isFront ? word[0].toString() : word[3].toString();
-        playPronunciation(pronunciationText);
-    } else {
-        document.getElementById('vocabLabel').innerText = "Tất cả từ vựng đã hoàn thành.";
-    }
-    updateQuestionCounter(); // Cập nhật số câu hỏi mỗi lần hiển thị
-}
-
-    function playPronunciation(text) {
-    currentPronunciationText = text; // Lưu lại câu vừa phát âm
-    if (audio) {
-        audio.stop(); // Dừng âm thanh nếu đang chơi
-    }
-
-    // Tìm file âm thanh tương ứng trong audioMapping
-    const audioEntry = audioMapping.find(item => item.text === text);
-    if (audioEntry) {
-        audio = new Howl({
-            src: [audioEntry.file],
-            html5: true,
-            onend: function () {
-                // Khi âm thanh đã hoàn thành
-                if (autoFlip) {
-                    autoFlipLogic();
-                }
-            },
-            onloaderror: function () {
-                console.log("Lỗi phát âm thanh từ file local.");
-            }
-        });
-
-        audio.play();
-    } else {
-        console.log("Không tìm thấy file âm thanh cho từ:", text);
-    }
-}
-
-    function repeatPronunciation() {
-        if (currentPronunciationText) {
-            playPronunciation(currentPronunciationText);
-        }
-    }
-
-    function autoFlipLogic() {
-        autoFlipTimeout = setTimeout(() => {
-            flipCard(); // Flip giữa front và back
-            setTimeout(nextWord, 4000); // Đợi 4s sau khi flip trước khi chuyển sang từ tiếp theo
-        }, 4000); // Đặt thời gian chờ giữa các từ ở chế độ tự động
-    }
-
-    function nextWord() {
-        if (vocabList.length === 0) return;
-
-        if (isRandomMode) {
-            clearTimeout(autoFlipTimeout); // Xóa timeout trước đó
-            currentIndex = Math.floor(Math.random() * vocabList.length);
-        } else {
-            clearTimeout(autoFlipTimeout); // Xóa timeout trước đó
-            currentIndex = (currentIndex + 1) % vocabList.length;
-        }
-
-        isFront = true; // Reset về mặt trước
-        saveProgress(); // Lưu tiến trình
-        displayWord();
-    }
-
-    function prevWord() {
-        if (vocabList.length === 0) return;
-
-        if (isRandomMode) {
-            clearTimeout(autoFlipTimeout); // Xóa timeout trước đó
-            currentIndex = Math.floor(Math.random() * vocabList.length);
-        } else {
-            clearTimeout(autoFlipTimeout); // Xóa timeout trước đó
-            currentIndex = (currentIndex - 1 + vocabList.length) % vocabList.length;
-        }
-
-        isFront = true; // Reset về mặt trước
-        saveProgress(); // Lưu tiến trình
-        displayWord();
-    }
-
-    function flipCard() {
-        isFront = !isFront;
-        displayWord();
-    }
-
-    function flipCardToBack() {
-        isFront = false; // Chuyển sang mặt sau
-        displayWord();
-    }
-
-    function toggleAutoFlip() {
-        autoFlip = !autoFlip;
-        const button = document.getElementById('autoFlipButton');
-        button.innerText = autoFlip ? "Tắt Tự Động" : "Tự Động";
-
-        if (autoFlip) {
-            alert("Chế độ tự động đã bật.");
-            autoFlipLogic(); // Bắt đầu chế độ tự động
-        } else {
-            alert("Chế độ tự động đã tắt.");
-            clearTimeout(autoFlipTimeout); // Dừng chế độ tự động
-            if (audio) {
-                audio.stop(); // Dừng phát âm ngay lập tức
-            }
-        }
-    }
-
-    function removePunctuation(text) {
-        return text.replace(/[.,\/#!$%\^&\*;:{}=\-_`~()?]/g, '').replace(/\s{2,}/g, ' ');
-    }
-
-    function checkAnswer() {
-        const userAnswer = removePunctuation(document.getElementById('answerInput').value.toString().trim().toLowerCase());
-        const word = vocabList[currentIndex];
-        const correctAnswer = removePunctuation((isFront ? word[0] : word[3]).toString().trim().toLowerCase());
-
-        if (userAnswer === correctAnswer) {
-            showNotification("Đúng!", true);
-            if (isFront) {
-                flipCard();
-            } else {
-                nextWord();
-            }
-        } else {
-            showNotification("Sai!", false);
-            playPronunciation(correctAnswer);
-
-            // Tăng số lần sai của từ hiện tại
-            const currentWordKey = word.join('|'); // Tạo key duy nhất cho từ
-            mistakeCount[currentWordKey] = (mistakeCount[currentWordKey] || 0) + 1;
-
-            // Nếu số lần sai đạt ngưỡng (ví dụ: 2 lần), đánh dấu từ là khó
-            if (mistakeCount[currentWordKey] >= 2) {
-                markAsDifficult(word);
-            }
-        }
-
-        // Xóa nội dung trong khung nhập liệu sau khi kiểm tra
-        document.getElementById('answerInput').value = '';
-    }
-
-    function checkAnswerBack() {
-        const currentExample = removePunctuation(vocabList[currentIndex][3].toString().trim().toLowerCase());
-        const userAnswerBack = removePunctuation(document.getElementById("writingCheckBack").value.trim().toLowerCase());
-
-        document.getElementById("writingCheckBack").value = ""; // Xóa câu trả lời cũ
-
-        if (userAnswerBack === currentExample) {
-            showNotification("Đúng!", true);
-
-            // Hiển thị câu trả lời đúng
-            document.getElementById('vocabLabel').innerHTML = `
-                <div class="card">
-                    <span class="example">${vocabList[currentIndex][3]}</span><br>
-                    <span class="example_ipa">${vocabList[currentIndex][4]}</span><br>
-                    <span class="example_vi">${vocabList[currentIndex][5]}</span>
-                </div>
-            `;
-
-            // Phát âm câu trả lời đúng
-            playPronunciation(vocabList[currentIndex][3]);
-
-            // Đợi 3 giây trước khi chuyển sang từ tiếp theo
-            setTimeout(() => {
-                nextWord();
-            }, 3000); // 3000 milliseconds = 3 giây
-        } else {
-            showNotification("Sai!", false);
-            flipCardToBack(); // Hiển thị mặt sau nếu câu trả lời sai
-            playPronunciation(currentExample); // Phát âm thanh của câu trả lời đúng
-
-            // Tăng số lần sai của từ hiện tại (mặt sau)
-            const currentWordKey = vocabList[currentIndex].join('|'); // Tạo key duy nhất cho từ
-            mistakeCount[currentWordKey] = (mistakeCount[currentWordKey] || 0) + 1;
-
-            // Nếu số lần sai đạt ngưỡng (ví dụ: 2 lần), đánh dấu từ là khó
-            if (mistakeCount[currentWordKey] >= 2) {
-                markAsDifficult(vocabList[currentIndex]);
-            }
-        }
-    }
-
-    function markAsDifficult(word) {
-        if (!difficultWords.some(w => w.join('|') === word.join('|'))) {
-            difficultWords.push(word); // Thêm từ vào danh sách khó
-            saveDifficultWords(); // Lưu danh sách vào localStorage
-            alert("Từ này đã được đánh dấu là khó!");
-        }
-    }
-
-    function saveDifficultWords() {
-        localStorage.setItem('difficultWords', JSON.stringify(difficultWords));
-    }
-
-    function loadDifficultWords() {
-        const savedWords = localStorage.getItem('difficultWords');
-        if (savedWords) {
-            difficultWords = JSON.parse(savedWords);
-        }
-    }
-
-    function saveProgress() {
-        localStorage.setItem('vocabList', JSON.stringify(vocabList));
-        localStorage.setItem('currentIndex', currentIndex);
-    }
-
-    function loadProgress() {
-        const savedVocabList = localStorage.getItem('vocabList');
-        const savedCurrentIndex = localStorage.getItem('currentIndex');
-
-        if (savedVocabList && savedCurrentIndex !== null) {
-            vocabList = JSON.parse(savedVocabList);
-            currentIndex = parseInt(savedCurrentIndex);
-        }
-    }
-
-    function clearStorage() {
-        localStorage.removeItem('vocabList');
-        localStorage.removeItem('currentIndex');
-        localStorage.removeItem('difficultWords');
-        vocabList = [];
-        currentIndex = 0;
-        difficultWords = [];
-        displayWord();
-        alert("Dữ liệu đã lưu đã được xóa.");
-    }
-
-    // Gọi hàm loadProgress và loadDifficultWords khi trang được tải
-    window.onload = function () {
-        loadProgress();
-        loadDifficultWords();
-        displayWord();
-    };
-
-    function studyDifficultWords() {
-        if (difficultWords.length > 0) {
-            vocabList = difficultWords; // Chuyển sang danh sách câu khó
-            currentIndex = 0; // Bắt đầu từ câu đầu tiên
-            displayWord();
-            alert("Chuyển sang chế độ học câu khó!");
-        } else {
-            alert("Không có câu nào được đánh dấu là khó!");
-        }
-    }
-
-    function exportDifficultWords() {
-        if (difficultWords.length === 0) {
-            alert("Không có câu nào được đánh dấu là khó!");
-            return;
-        }
-
-        // Tạo một workbook mới
-        const workbook = XLSX.utils.book_new();
-        const worksheet = XLSX.utils.json_to_sheet(difficultWords);
-
-        // Thêm worksheet vào workbook
-        XLSX.utils.book_append_sheet(workbook, worksheet, "Câu khó");
-
-        // Xuất file Excel
-        XLSX.writeFile(workbook, "difficult_words.xlsx");
-        alert("Danh sách câu khó đã được xuất thành file Excel!");
-    }
-</script>
+    </script>
 </body>
 </html>
